compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_float_size.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 196
expression: "let x = <<1:8-float>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:8-float>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:8-float>> x
  │             ^ Invalid float size

Hint: floats have an exact size of 16/32/64 bits.
See: https://tour.gleam.run/data-types/bit-arrays/
